--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.1.4"
+    testCompile 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
 }
