--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         <activity android:name=".SecondActivity">
 
         </activity>
+
+        <receiver android:name=".MyReceviver"></receiver>
     </application>
 
 </manifest>
